--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
                     <li data-idx="2"><a class="_nav">产品介绍</a></li>
                     <li data-idx="3"><a class="_nav">成功案例</a></li>
                     <li data-idx="4"><a class="_nav">合作伙伴</a></li>
-                    <li data-idx="5"><a class="_nav" href="https://hczhizao.com/about.html">关于我们</a></li>
+                    <li data-idx="5"><a class="_nav" href="/about.html">关于我们</a></li>
                 </ul>
                 <div id="focus" class="focus" style="width: 90px; height: 4px; left: 350px;">
                     <em></em>
