--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0021)https://hczhizao.com/ -->
+<!-- saved from url=(0021)https://longz7z8.github.io/ -->
 <html><script>
     (function() {
     class RuffleMimeType {
