--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
             </div>
             <div class="nav">
                 <ul id="nav" data-idx="5">
-                    <li data-idx="0" style="font-weight: normal;"><a class="_nav" href="https://hczhizao.com/index.html">首页</a></li>
+                    <li data-idx="0" style="font-weight: normal;"><a class="_nav" href="https://longz7z8.github.io/index.html">首页</a></li>
                     <li data-idx="1" style="font-weight: normal;"><a class="_nav">解决方案</a></li>
                     <li data-idx="2" style="font-weight: normal;"><a class="_nav">产品介绍</a></li>
                     <li data-idx="3" style="font-weight: normal;"><a class="_nav">成功案例</a></li>
