--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0031)https://hczhizao.com/about.html -->
+<!-- saved from url=(0031)https://longz7z8.github.io/about.html -->
 <html><script>
     (function() {
     class RuffleMimeType {
