--- a/读者会.html
+++ b/读者会.html
@@ -6,4 +6,5 @@
 <p style="text-align: center; color: heise(123,123,123);">里面主要介绍编程</p>
 <p style="text-align: center; color: heise(123,123,123);">如果有意见的话可以提出呦，点击<a href="https://f.wps.cn/w/w3sFRHxe/">这里</a>提出</p>
 <p style="text-align: center; color: heise(123,123,123);">未完待续</p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a>
 </html>
