--- a/分享站.html
+++ b/分享站.html
@@ -9,7 +9,7 @@
 <p style="text-align: center; color: heise(123,123,123);">破解版密钥（v16.1.1）：ZF3R0-FHED2-M80TY-8QYGC-NPKYF</p>
 <p style="text-align: center; color: heise(123,123,123);">下载链接：</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="https://client.hczhizao.com/storage/VMware%20Workstation%20v16.1.1.exe">链接下载</a></p>
-<p style="text-align: center; color: heise(123,123,123);"><a href="https://pan.baidu.com/s/1uJhOOUVlVprRBe4muX1-4Q">网盘下载，提取码8fff</a></p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="https://pan.baidu.com/s/1uJhOOUVlVprRBe4muX1-4Q?pwd=8fff">网盘下载</a></p>
 <p style="text-align: center; color: heise(123,123,123);">未完待续</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a>
 </html>
