--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p style="text-align: center; color: heise(123,123,123);"><img src="https://client.hczhizao.com/storage/long1.png"></p>
 <p style="text-align: center; color: heise(123,123,123);">接下来我给大家介绍一下我网站的几个板块</p>
 <p style="text-align: center; color: heise(123,123,123);">首先我给大家介绍的是——我的资源分享站</p>
-<p style="text-align: center; color: heise(123,123,123);">点击<a href="/分享站.html">这里</a>查看哦</p>
+<p style="text-align: center; color: heise(123,123,123);">点击<a href="/分享站询问.html">这里</a>查看哦</p>
 <p style="text-align: center; color: heise(123,123,123);">然后我给大家介绍的是——我的绘本读者会</p>
 <p style="text-align: center; color: heise(123,123,123);">点击<a href="/读者会.html">这里</a>查看哦</p>
 <p style="text-align: center; color: heise(123,123,123);">未完待续</p>
