--- a/zym.html
+++ b/zym.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel = "icon" href = "https://client.hczhizao.com/storage/long.png">
-<title>读者会</title>
+<title>子域名查看器</title>
 <p style="text-align: center; color: heise(123,123,123);">欢迎来到子域名查看器</p>
 <p style="text-align: center; color: heise(123,123,123);">本网站的子域名有：</p>
 <p style="text-align: center; color: heise(123,123,123);">scratchwebopen.longz7z8.com.cn(scratchwebopen.github.io)</p>
