--- a/Typora-ok.html
+++ b/Typora-ok.html
@@ -3,6 +3,6 @@
 <title>询问</title>
 <p style="text-align: center; color: heise(123,123,123);">验证成功~</p>
 <p style="text-align: center; color: heise(123,123,123);">Typora：下载链接：https://pan.baidu.com/s/1TY4R4xr3ABEWZDwVi9qvKw?pwd=u2nk</p>
-<p style="text-align: center; color: heise(123,123,123);">Flappy Bird：点击<a href="https://objects.githubusercontent.com/github-production-release-asset-2e65be/498270151/92eb298a-0ab8-4ff7-b3a5-6b5f524b0163?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220601%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220601T113819Z&X-Amz-Expires=300&X-Amz-Signature=bafaff28edff91e1571e3938fdf0791dc4179e713a5bfad60d46f674aeb1cace&X-Amz-SignedHeaders=host&actor_id=91475786&key_id=0&repo_id=498270151&response-content-disposition=attachment%3B%20filename%3DFlappy.Bird.exe&response-content-type=application%2Foctet-stream">这里</a>下载</p>
+<p style="text-align: center; color: heise(123,123,123);">Flappy Bird：下载链接：https://pan.baidu.com/s/1xACBro7DrRbTdl8pwL_8Aw?pwd=63n5</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a>
 </html>
