--- a/Typora-ok.html
+++ b/Typora-ok.html
@@ -2,7 +2,7 @@
 <link rel = "icon" href = "https://client.hczhizao.com/storage/long.png">
 <title>询问</title>
 <p style="text-align: center; color: heise(123,123,123);">验证成功~</p>
-<p style="text-align: center; color: heise(123,123,123);">Typora：下载链接：https://pan.baidu.com/s/1TY4R4xr3ABEWZDwVi9qvKw?pwd=u2nk</p>
+<p style="text-align: center; color: heise(123,123,123);">Typora老版本：下载链接：https://pan.baidu.com/s/1TY4R4xr3ABEWZDwVi9qvKw?pwd=u2nk</p>
 <p style="text-align: center; color: heise(123,123,123);">Flappy Bird电脑版：下载链接：https://pan.baidu.com/s/1xACBro7DrRbTdl8pwL_8Aw?pwd=63n5</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a>
 </html>
