--- a/about.html
+++ b/about.html
@@ -3,5 +3,5 @@
 <title>关于我们</title>
 <p style="text-align: center; color: heise(123,123,123);">本网站为韩沛龙的个人博客</p>
 <p style="text-align: center; color: heise(123,123,123);">未完待续</p>
-<p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a>
+<p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a></p>
 </html>
