--- a/Typora-ok.html
+++ b/Typora-ok.html
@@ -2,7 +2,8 @@
 <link rel = "icon" href = "https://client.hczhizao.com/storage/long.png">
 <title>询问</title>
 <p style="text-align: center; color: heise(123,123,123);">验证成功~</p>
-<p style="text-align: center; color: heise(123,123,123);">Typora老版本：下载链接：https://pan.baidu.com/s/1TY4R4xr3ABEWZDwVi9qvKw?pwd=u2nk</p>
-<p style="text-align: center; color: heise(123,123,123);">Flappy Bird电脑版：下载链接：https://pan.baidu.com/s/1xACBro7DrRbTdl8pwL_8Aw?pwd=63n5</p>
-<p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a>
+<p style="text-align: center; color: heise(123,123,123);">（所有应用都在一个链接里哦）</p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="https://pan.baidu.com/s/1uClZrcp-J1V-gCVfC549ag?pwd=nrcv">度盘下载</a></p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="http://121.62.60.212:19998/s/gQQ6oy9864Cnsar">作者自建网盘下载（不限速）</a></p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a></p>
 </html>
