--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <p style="text-align: center; color: heise(123,123,123);">点击<a href="/分享站询问.html">这里</a>查看哦</p>
 <p style="text-align: center; color: heise(123,123,123);">然后我给大家介绍的是——我的绘本读者会</p>
 <p style="text-align: center; color: heise(123,123,123);">点击<a href="/读者会.html">这里</a>查看哦</p>
+<p style="text-align: center; color: heise(123,123,123);">网站新增了一个板块——论坛/p>
+  <p style="text-align: center; color: heise(123,123,123);">点击<a href="https://post.longz7z8.com.cn.html">这里</a>查看哦/p>
 <p style="text-align: center; color: heise(123,123,123);">未完待续</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="/about.html">关于网站</a> <a href="/contact.html">联系作者</a> <a href="/disclaimers.html">免责声明</a></p>
 <p style="text-align: center; color: heise(123,123,123);">韩沛龙©2022</p>
