--- a/Typora-ok.html
+++ b/Typora-ok.html
@@ -4,6 +4,6 @@
 <p style="text-align: center; color: heise(123,123,123);">验证成功~</p>
 <p style="text-align: center; color: heise(123,123,123);">（所有应用都在一个链接里哦）</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="https://pan.baidu.com/s/1uClZrcp-J1V-gCVfC549ag?pwd=nrcv">度盘下载</a></p>
-<p style="text-align: center; color: heise(123,123,123);"><a href="http://154.91.156.117:8080/s/mwZ6EYzAFH5S4ti">作者自建网盘下载（不限速）</a></p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="https://yaurl.top/c1">作者自建网盘下载（不限速）</a></p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="/index.html">回到主站</a></p>
 </html>
