--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p style="text-align: center; color: heise(123,123,123);">网站新增了一个板块——论坛</p>
 <p style="text-align: center; color: heise(123,123,123);">点击<a href="https://post.longz7z8.com.cn">这里</a>查看哦</p>
 <p style="text-align: center; color: heise(123,123,123);">还有一些杂七杂八的小工具</p>
-<p style="text-align: center; color: heise(123,123,123);"><a href="https://yaurl.top">YaUrl</a> a href="https://03t.cc/tools.html">03t工具箱</a></p>
+<p style="text-align: center; color: heise(123,123,123);"><a href="https://yaurl.top">YaUrl</a> <a href="https://03t.cc/tools.html">03t工具箱</a></p>
 <p style="text-align: center; color: heise(123,123,123);">未完待续</p>
 <p style="text-align: center; color: heise(123,123,123);"><a href="/about.html">关于网站</a> <a href="/contact.html">联系作者</a> <a href="/disclaimers.html">免责声明</a></p>
 <p style="text-align: center; color: heise(123,123,123);">韩沛龙©2022</p>
