--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>龙龙-专注于杂七杂八的事情</title>
 <p style="text-align: center; color: heise(123,123,123);">*新版网站正在公测，点击<a href="https://new.longz7z8.com.cn">这里</a>访问新版页面</p>
 <p style="text-align: center; color: heise(123,123,123);">*我的mc服务器地址：cn-nn-dx-1.natfrp.cloud:50696</p>
-<p style="text-align: center; color: heise(123,123,123);">欢迎大家来玩</p>
+<p style="text-align: center; color: heise(123,123,123);">欢迎大家来玩（暂时关闭）</p>
 <p style="text-align: center; color: heise(123,123,123);">---------------------------</p>
 <p style="text-align: center; color: heise(123,123,123);">欢迎来到韩沛龙的博客，名字叫龙龙</p>
 <p style="text-align: center; color: heise(123,123,123);">请大家牢记我的标志：</p>
